--- a/XOR/TP_XOR_MLP.ipynb
+++ b/XOR/TP_XOR_MLP.ipynb
@@ -1,21 +1,244 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## **Démonstration de la dérivée de la fonction sigmoïde**\n",
+    "\n",
+    "On a\n",
+    "\n",
+    "$$\n",
+    "\\sigma'(z) = \\left( \\frac{1}{1 + e^{-z}} \\right)'\n",
+    "$$\n",
+    "\n",
+    "Et on a :\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{1}{u(z)}\\right)' = -\\frac{u'(z)}{(u(z))^2}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Calculons $ u'(z) $:\n",
+    "$ u(z) = 1 + e^{-z} \\quad \\Rightarrow \\quad u'(z) = -e^{-z} $\n",
+    "\n",
+    "Ainsi :\n",
+    "\n",
+    "$$\n",
+    "\\sigma'(z) = -\\frac{-e^{-z}}{(1 + e^{-z})^2} = \\frac{e^{-z}}{(1 + e^{-z})^2}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "donc :\n",
+    "$$\n",
+    "\\sigma'(z) =  \\left( \\frac{1}{1 + e^{-z}} \\right) \\left( \\frac{e^{-z}}{1 + e^{-z}} \\right) = \\left( \\frac{1}{1 + e^{-z}} \\right) \\left( \\frac{e^{-z} + 1 - 1}{1 + e^{-z}} \\right) = \\left( \\frac{1}{1 + e^{-z}} \\right) \\left( 1 - \\frac{ 1}{1 + e^{-z}} \\right)\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "Alors :\n",
+    "\n",
+    "$$\n",
+    "\\sigma'(z) = \\sigma(z) \\cdot (1 - \\sigma(z))\n",
+    "$$"
+   ],
+   "id": "a5364b8c9e558686"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## **Le role de seed :**\n",
+    "\n",
+    "La fonction **seed** permet d'avoir toujours les mêmes poids initiaux et donc de rendre l'entraînement du modèle prévisible et comparable."
+   ],
+   "id": "2b7008f3941c7cc9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## **Les Démonstrations des derivees**\n",
+    "\n",
+    "On a :\n",
+    "\n",
+    "- $Z_1 = XW_1 + b_1$\n",
+    "- $A_1 = \\sigma(Z_1)$\n",
+    "- $Z_2 = A_1W_2 + b_2$\n",
+    "- $A_2 = \\sigma(Z_2)$\n",
+    "- $L = \\frac{1}{m} \\sum_{i=1}^m (y_i - A_{2,i})^2$\n",
+    "\n",
+    "---\n",
+    "---\n",
+    "\n",
+    "## 1.Calculons  $\\frac{\\partial L}{\\partial Z_2}$ :\n",
+    "\n",
+    "\n",
+    "$$ \\frac{\\partial L}{\\partial Z_2} = \\frac{\\partial L}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} $$\n",
+    "\n",
+    "On a donc :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial A_2} = \\frac{\\partial}{\\partial A_2} \\left( \\frac{1}{m} \\sum_{i=1}^{m} (y_i - A_{2i})^2 \\right)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\frac{\\partial}{\\partial A_2} \\left( \\frac{1}{m} (y - A_2)^2 \\right)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\frac{-2}{m} (y - A_2) = \\frac{2}{m} (A_2 - y)\n",
+    "$$\n",
+    "\n",
+    "Et :\n",
+    "\n",
+    "$$ A_2 = \\sigma(Z_2) \\quad \\Rightarrow \\quad \\frac{\\partial A_2}{\\partial Z_2} = \\sigma'(Z_2) $$\n",
+    "\n",
+    "Donc :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial Z_2} = \\frac{\\partial L}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} = \\frac{2}{m} (A_2 - y) \\sigma'(Z_2)\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2.Calculons $\\frac{\\partial L}{\\partial W_2}$ :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial W_2} = \\frac{\\partial L}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial W_2}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "Et on a :\n",
+    "\n",
+    "$$\n",
+    "Z_2 = A_1 W_2 + b_2 \\Rightarrow \\frac{\\partial Z_2}{\\partial W_2} = A_1\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Donc :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial W_2} =  \\frac{\\partial L}{\\partial Z_2} \\cdot A_1\n",
+    "\\Rightarrow\n",
+    "\\frac{\\partial L}{\\partial W_2} = A_1^T \\cdot \\frac{\\partial L}{\\partial Z_2}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3.Calculons $\\frac{\\partial L}{\\partial b_2}$ :\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial b_2} = \\frac{\\partial L}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial b_2}\n",
+    "$$\n",
+    "\n",
+    "On a  :\n",
+    "\n",
+    "$$\n",
+    "Z_2 = A_1W_2 + b_2 \\quad \\Rightarrow \\quad \\frac{\\partial Z_2}{\\partial b_2} = 1\n",
+    "$$\n",
+    "\n",
+    "Donc :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial b_2} = \\frac{\\partial L}{\\partial Z_2}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 4.Calculons $\\frac{\\partial L}{\\partial Z_1}$ :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial Z_1} = \\frac{\\partial L}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1}\n",
+    "$$\n",
+    "\n",
+    "On a :\n",
+    "\n",
+    "$$\n",
+    "Z_2 = A_1W_2 + b_2 \\quad \\Rightarrow \\quad \\frac{\\partial Z_2}{\\partial A_1} = W_2\n",
+    "$$\n",
+    "\n",
+    "Et :\n",
+    "\n",
+    "$$\n",
+    "A_1 = \\sigma(Z_1) \\quad \\Rightarrow \\quad \\frac{\\partial A_1}{\\partial Z_1} = \\sigma'(Z_1)\n",
+    "$$\n",
+    "\n",
+    "Donc :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial Z_1} = \\left( \\frac{\\partial L}{\\partial Z_2} W_2^T \\right) \\sigma'(Z_1)\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 5.Calculons $\\frac{\\partial L}{\\partial W_1}$ :\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial W_1} = \\frac{\\partial L}{\\partial Z_1} \\cdot \\frac{\\partial Z_1}{\\partial W_1}\n",
+    "$$\n",
+    "\n",
+    "On a :\n",
+    "\n",
+    "$$\n",
+    "Z_1 = X W_1 + b_1 \\quad \\Rightarrow \\quad \\frac{\\partial Z_1}{\\partial W_1} = X\n",
+    "$$\n",
+    "\n",
+    "Donc :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial W_1} =  \\frac{\\partial L}{\\partial Z_1} \\cdot X\n",
+    "\\Rightarrow\n",
+    "\\frac{\\partial L}{\\partial W_1} = X^T \\cdot \\frac{\\partial L}{\\partial Z_1}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 6.Calculons $\\frac{\\partial L}{\\partial b_1}$ :\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial b_1} = \\frac{\\partial L}{\\partial Z_1} \\times \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "$$\n",
+    "\n",
+    "On a :\n",
+    "\n",
+    "$$\n",
+    "Z_1 = XW_1 + b_1 \\quad \\Rightarrow \\quad \\frac{\\partial Z_1}{\\partial b_1} = 1\n",
+    "$$\n",
+    "\n",
+    "Donc :\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial b_1} = \\frac{\\partial L}{\\partial Z_1}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "### Remarque :\n",
+    "*(On transpose juste pour bien faire correspondre les dimensions.)*"
+   ],
+   "id": "f65b26c40a83fc62"
+  },
+  {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-06T07:57:26.121718Z",
-     "start_time": "2025-05-06T07:57:24.907816Z"
+     "end_time": "2025-05-06T07:45:50.299045Z",
+     "start_time": "2025-05-06T07:45:50.257534Z"
     }
    },
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": 3,
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ],
-   "id": "initial_id",
-   "outputs": [],
-   "execution_count": 1
+   "id": "initial_id"
   },
   {
    "metadata": {
