--- a/XOR/TP_XOR_MLP.ipynb
+++ b/XOR/TP_XOR_MLP.ipynb
@@ -273,14 +273,11 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-06T07:48:10.630816Z",
-     "start_time": "2025-05-06T07:48:10.499494Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 5,
    "source": [
     "# Etape 2 : Définir la classe MLP\n",
     "class MLP:\n",
@@ -376,7 +373,9 @@
     "            self.backward(X, y, y_pred)\n",
     "        return losses"
    ],
-   "id": "4a1d5f39772bdba"
+   "id": "4a1d5f39772bdba",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
